--- a/projects/markdown-app/src/app/alert-error/alert-error.component.html
+++ b/projects/markdown-app/src/app/alert-error/alert-error.component.html
@@ -4,7 +4,7 @@
           <div class="alert-icon-wrapper">
               <clr-icon class="alert-icon" shape="check-circle"></clr-icon>
           </div>
-          <span class="alert-text">{{error && error.error ? error.error : error}}</span>
+          <span class="alert-text">{{getErrorMessage()}}</span>
       </div>
   </div>
 </div>
