additionally encrypt passwords

--- a/projects/markdown-app/src/app/passwords/passwords.component.html
+++ b/projects/markdown-app/src/app/passwords/passwords.component.html
@@ -33,8 +33,8 @@
                 <input *ngIf="entry.edit" type="text" [(ngModel)]="entry.username">
             </td>
             <td>
-                <span *ngIf="!entry.edit">{{entry.passwordShow ? entry.password : '*********'}}</span>
-                <input *ngIf="entry.edit" [type]="entry.passwordShow ? 'text' : 'password'" [(ngModel)]="entry.password">
+                <span *ngIf="!entry.edit">{{entry.passwordShow ? decryptPassword(entry.password) : '*********'}}</span>
+                <input *ngIf="entry.edit" [type]="entry.passwordShow ? 'text' : 'password'" [value]="decryptPassword(entry.password)" (input)="entry.password = encryptPassword($event.target.value)">
 
                 <clr-icon shape="eye" size="20" (click)="entry.passwordShow = true" *ngIf="!entry.passwordShow"></clr-icon>
                 <clr-icon shape="eye-hide" size="20" (click)="entry.passwordShow = false" *ngIf="entry.passwordShow"></clr-icon>
