encrypt passwords with two different aes implemenations

--- a/projects/markdown-app/src/app/passwords/passwords.component.html
+++ b/projects/markdown-app/src/app/passwords/passwords.component.html
@@ -34,13 +34,15 @@
             </td>
             <td>
                 <span *ngIf="!entry.edit">{{entry.passwordShow ? decryptPassword(entry.password) : '*********'}}</span>
-                <input *ngIf="entry.edit" [type]="entry.passwordShow ? 'text' : 'password'" [value]="decryptPassword(entry.password)" (input)="entry.password = encryptPassword($event.target.value)">
-
-                <clr-icon shape="eye" size="20" (click)="entry.passwordShow = true" *ngIf="!entry.passwordShow"></clr-icon>
-                <clr-icon shape="eye-hide" size="20" (click)="entry.passwordShow = false" *ngIf="entry.passwordShow"></clr-icon>
+                <clr-password-container *ngIf="entry.edit">
+                    <input [type]="entry.passwordShow ? 'text' : 'password'" clrPassword [value]="decryptPassword(entry.password)" (input)="entry.password = encryptPassword($event.target.value)">
+                </clr-password-container>
+                
+                <clr-icon class="showhide" shape="eye" size="20" (click)="entry.passwordShow = true" *ngIf="!entry.passwordShow && !entry.edit"></clr-icon>
+                <clr-icon class="showhide" shape="eye-hide" size="20" (click)="entry.passwordShow = false" *ngIf="entry.passwordShow && !entry.edit"></clr-icon>
             </td>
             <td class="last">
-                <button type="button" class="btn btn-icon btn-sm" (click)="random(i)" *ngIf="entry.edit"><clr-icon shape="undo"></clr-icon></button>
+                <button type="button" class="btn btn-icon btn-sm" (click)="random(i)" *ngIf="entry.edit"><clr-icon shape="wand"></clr-icon></button>
                 <button type="button" class="btn btn-icon btn-sm btn-success" (click)="entry.edit=false" *ngIf="entry.edit"><clr-icon shape="check"></clr-icon></button>
                 <button type="button" class="btn btn-icon btn-sm btn-danger" (click)="entryToDelete=i" *ngIf="entry.edit"><clr-icon shape="trash"></clr-icon></button>
 
@@ -67,7 +69,7 @@
     </tbody>
 </table>
 
-<div class="action">
+<div class="action" *ngIf="entries && page">
     <button class="btn btn-primary" (click)="askPassword=true">save</button> 
     <button class="btn btn-link" [routerLink]="['/']">cancel</button>
 </div>
@@ -89,15 +91,20 @@
 <div class="modal" *ngIf="askPassword">
     <div class="modal-dialog" role="dialog" aria-hidden="true">
         <div class="modal-content">
+            <div class="modal-header">
+                <button aria-label="Close" class="close" type="button">
+                    <clr-icon aria-hidden="true" shape="close"></clr-icon>
+                </button>
+                <h3 class="modal-title">Please enter your master password</h3>
+            </div>
             <div class="modal-body">
                 <app-alert-error [error]="pwerror"></app-alert-error>
-                <p>Please enter your master password:</p>
                 <clr-password-container>
                     <input type="password" clrPassword placeholder="master password" #password>
                 </clr-password-container>
                 <clr-password-container>
                     <input type="password" clrPassword placeholder="master password again" #password2>
-                </clr-password-container>                
+                </clr-password-container>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-outline" type="button" (click)="askPassword=false;password.value=''">Cancel</button>
