--- a/projects/markdown-app/src/app/passwords/passwords.component.css
+++ b/projects/markdown-app/src/app/passwords/passwords.component.css
@@ -19,14 +19,36 @@ table button {
     margin-bottom: 0;
 }
 
-td {
+th, td {
     width:20%;
+    font-size:1.15em;
 }
 
 td.last {
     width:40%;
 }
 
+td span {
+    display: inline-block;
+    margin-top:10px;
+}
+
 .action {
     margin-top:20px;
+}
+
+.modal-body {
+    overflow-y: hidden;
+}
+
+clr-icon {
+    cursor: pointer;
+}
+
+clr-password-container {
+    margin-top:0;
+}
+
+.showhide {
+    margin-left:7px;
 }
