--- a/projects/markdown-app/src/app/passwords/passwords.component.html
+++ b/projects/markdown-app/src/app/passwords/passwords.component.html
@@ -53,7 +53,7 @@
         <tr *ngIf="!entries && page">
             <td colspan="4" class="unlock">
                 <clr-password-container class="password">
-                    <input type="password" clrPassword placeholder="master password" (keyup.enter)="unlock(passw.value);passw.value=''" #passw>
+                    <input type="password" clrPassword placeholder="master password" (keyup.enter)="unlock(passw.value);passw.value=''" autofocus #passw>
                 </clr-password-container>
 
                 <button class="btn btn-primary" (click)="unlock(passw.value);passw.value=''">unlock</button>
