password improve save feedback

--- a/projects/markdown-app/src/app/passwords/passwords.component.html
+++ b/projects/markdown-app/src/app/passwords/passwords.component.html
@@ -2,17 +2,6 @@
 <span class="spinner spinner-inline" *ngIf="!page && !error">Loading...</span>
 <app-alert-error [error]="error"></app-alert-error>
 
-<div class="alert alert-success" role="alert" *ngIf="success">
-    <div class="alert-items">
-        <div class="alert-item static">
-            <div class="alert-icon-wrapper">
-                <clr-icon class="alert-icon" shape="check-circle"></clr-icon>
-            </div>
-            <span class="alert-text">successfull saved</span>
-        </div>
-    </div>
-</div>
-
 <table class="table">
     <thead>
         <tr>
@@ -70,8 +59,19 @@
 </table>
 
 <div class="action" *ngIf="entries && page">
-    <button class="btn btn-primary" (click)="askPassword=true">save</button> 
+    <button class="btn" [ngClass]="{'btn-success-outline': success, 'btn-primary': !success}" (click)="askPassword=true">save</button> 
     <button class="btn btn-link" [routerLink]="['/']">cancel</button>
+
+    <div class="alert alert-success" role="alert" *ngIf="success">
+        <div class="alert-items">
+            <div class="alert-item static">
+                <div class="alert-icon-wrapper">
+                    <clr-icon class="alert-icon" shape="check-circle"></clr-icon>
+                </div>
+                <span class="alert-text">successfull saved</span>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="modal" *ngIf="entryToDelete!==null">
