--- a/projects/markdown-app/src/app/passwords/passwords.component.html
+++ b/projects/markdown-app/src/app/passwords/passwords.component.html
@@ -8,11 +8,11 @@
             <th>Service</th>
             <th>Username</th>
             <th>Password</th>
-            <th></th>
+            <th><input placeholder="search" name="input" class="search" [(ngModel)]="q" /></th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let entry of entries; let i = index">
+        <tr *ngFor="let entry of getEntries(); let i = index">
             <td>
                 <span *ngIf="!entry.edit">{{entry.service}}</span>
                 <input *ngIf="entry.edit" type="text" [(ngModel)]="entry.service">
@@ -41,11 +41,8 @@
         </tr>
         <tr *ngIf="!entries && page">
             <td colspan="4" class="unlock">
-                <clr-password-container class="password">
-                    <input type="password" clrPassword placeholder="master password" (keyup.enter)="unlock(passw.value);passw.value=''" autofocus #passw>
-                </clr-password-container>
-
-                <button class="btn btn-primary" (click)="unlock(passw.value);passw.value=''">unlock</button>
+                <input type="password" class="password" placeholder="master password" (keyup.enter)="unlock(passw.value);passw.value=''" #unlockPasswordInput>
+                <button class="btn btn-primary" (click)="unlock(unlockPasswordInput.value);unlockPasswordInput.value=''">unlock</button>
             </td>
         </tr>
         <tr *ngIf="entries">
@@ -59,7 +56,7 @@
 </table>
 
 <div class="action" *ngIf="entries && page">
-    <button class="btn" [ngClass]="{'btn-success-outline': success, 'btn-primary': !success}" (click)="askPassword=true">save</button> 
+    <button class="btn" [ngClass]="{'btn-success-outline': success, 'btn-primary': !success}" (click)="showAskPassword()">save</button> 
     <button class="btn btn-link" [routerLink]="['/']">cancel</button>
 
     <div class="alert alert-success" role="alert" *ngIf="success">
@@ -97,14 +94,10 @@
                 </button>
                 <h3 class="modal-title">Please enter your master password</h3>
             </div>
-            <div class="modal-body">
+            <div class="modal-body savepassword">
                 <app-alert-error [error]="pwerror"></app-alert-error>
-                <clr-password-container>
-                    <input type="password" clrPassword placeholder="master password" #password>
-                </clr-password-container>
-                <clr-password-container>
-                    <input type="password" clrPassword placeholder="master password again" #password2>
-                </clr-password-container>
+                <input type="password" class="password" placeholder="master password" #password>
+                <input type="password" class="password" placeholder="master password again" #password2 (keyup.enter)="save(password.value, password2.value);password.value='';password2.value=''">
             </div>
             <div class="modal-footer">
                 <button class="btn btn-outline" type="button" (click)="askPassword=false;password.value=''">Cancel</button>
