--- a/projects/markdown-app/src/app/passwords/passwords.component.css
+++ b/projects/markdown-app/src/app/passwords/passwords.component.css
@@ -2,12 +2,40 @@ h1 {
     margin-top:0;
 }
 
+.table th {
+    vertical-align: middle;
+} 
+
+.search {
+    font-weight: normal;
+}
+
 .unlock {
     text-align: center;
+    padding:50px;
 }
 
 .password {
-    display: inline-block;
+    font-size: 1.1em;
+    border-radius: 2px;
+    margin-right:0.3em;
+    padding: 0.3em;
+    vertical-align: middle;
+    border: 1px solid #ccc;
+}
+
+.unlock .btn {
+    margin:0;
+}
+
+.password:focus{
+    outline: none;
+}
+
+.savepassword .password {
+    display:block;
+    margin-top: 10px;
+    width: 60%;
 }
 
 .add {
