password autofocus search after login and prefill username with most frequently used username

--- a/projects/markdown-app/src/app/passwords/passwords.component.html
+++ b/projects/markdown-app/src/app/passwords/passwords.component.html
@@ -8,7 +8,7 @@
             <th>Service</th>
             <th>Username</th>
             <th>Password</th>
-            <th><input placeholder="search" name="input" class="search" [(ngModel)]="q" /></th>
+            <th><input placeholder="search" name="input" class="search" [(ngModel)]="q" #search /></th>
         </tr>
     </thead>
     <tbody>
