--- a/projects/markdown-app/src/app/page-edit/page-edit.component.css
+++ b/projects/markdown-app/src/app/page-edit/page-edit.component.css
@@ -1,13 +1,18 @@
+.top {
+    display:flex;
+}   
+
+.dropdown-menu {
+    top:auto;
+    left:-133px;
+}
+
 input {
     margin-top:10px;
     margin-bottom:20px;
+    margin-right:30px;
     font-size:1.5em;
-    margin-left:60px;
-    width:90%;
-}
-
-.selectedIcon {
-    position: absolute;
+    flex-grow: 1;
 }
 
 .selectIcon  {
@@ -37,4 +42,8 @@ input {
 
 .success {
     color:#2f8400;
+}
+
+.edit {
+    position: relative;
 }
