--- a/projects/markdown-app/src/app/passwords/passwords.component.html
+++ b/projects/markdown-app/src/app/passwords/passwords.component.html
@@ -41,7 +41,7 @@
         </tr>
         <tr *ngIf="!entries && page">
             <td colspan="4" class="unlock">
-                <input type="password" class="password" placeholder="master password" (keyup.enter)="unlock(passw.value);passw.value=''" #unlockPasswordInput>
+                <input type="password" class="password" placeholder="master password" (keyup.enter)="unlock(unlockPasswordInput.value);unlockPasswordInput.value=''" #unlockPasswordInput>
                 <button class="btn btn-primary" (click)="unlock(unlockPasswordInput.value);unlockPasswordInput.value=''">unlock</button>
             </td>
         </tr>
