--- a/projects/markdown-app/src/app/app.component.html
+++ b/projects/markdown-app/src/app/app.component.html
@@ -7,15 +7,9 @@
             </a>
         </div>
         <div class="header-nav">
-            <a class="nav-link nav-text" (click)="add()">add page</a>
-        </div>
-        <div class="header-actions">
-            <a class="nav-link nav-icon" [routerLink]="['/passwords']">
-                <clr-icon shape="key"></clr-icon>
-            </a>
-            <a class="nav-link nav-icon" [routerLink]="['/filelist']">
-                <clr-icon shape="upload-cloud"></clr-icon>
-            </a>
+            <a class="nav-link nav-icon" (click)="add()"><clr-icon shape="add-text"></clr-icon></a>
+            <a class="nav-link nav-icon" [routerLink]="['/passwords']"><clr-icon shape="key"></clr-icon></a>
+            <a class="nav-link nav-icon" [routerLink]="['/filelist']"><clr-icon shape="upload-cloud"></clr-icon></a>
         </div>
     </clr-header>
     
