--- a/projects/markdown-app/src/app/passwords/passwords.component.html
+++ b/projects/markdown-app/src/app/passwords/passwords.component.html
@@ -3,7 +3,7 @@
 <app-alert-error [error]="error"></app-alert-error>
 
 <table class="table">
-    <thead>
+    <thead *ngIf="hasEntries()">
         <tr>
             <th>Service</th>
             <th>Username</th>
@@ -57,15 +57,20 @@
 
 <div class="action" *ngIf="entries && page">
     <button class="btn" [ngClass]="{'btn-success-outline': success, 'btn-primary': !success}" (click)="showAskPassword()">save</button> 
+    <button class="btn btn-info-outline" (click)="showExport()">export</button>
+    <button class="btn btn-warning-outline" (click)="f.click()">import</button>
     <button class="btn btn-link" [routerLink]="['/']">cancel</button>
+    <input type="file" name="file" (change)="import($event)" class="hidden" #f>
 
-    <div class="alert alert-success" role="alert" *ngIf="success">
+    <div class="alert alert-success" role="alert" *ngIf="success || successImport || successExport">
         <div class="alert-items">
             <div class="alert-item static">
                 <div class="alert-icon-wrapper">
                     <clr-icon class="alert-icon" shape="check-circle"></clr-icon>
                 </div>
-                <span class="alert-text">successfull saved</span>
+                <span class="alert-text" *ngIf="success">successfully saved</span>
+                <span class="alert-text" *ngIf="successImport">successfully imported</span>
+                <span class="alert-text" *ngIf="successExport">successfully saved to clipboard</span>
             </div>
         </div>
     </div>
@@ -78,8 +83,8 @@
                 <p>Really delete {{entries[entryToDelete].service}}?</p>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-outline" type="button" (click)="entryToDelete=null">Cancel</button>
-                <button class="btn btn-danger" type="button" (click)="delete(entryToDelete); entryToDelete = null;">Ok</button>
+                <button class="btn btn-outline" type="button" (click)="entryToDelete=null">cancel</button>
+                <button class="btn btn-danger" type="button" (click)="delete(entryToDelete); entryToDelete = null;">delete</button>
             </div>
         </div>
     </div>
@@ -89,23 +94,43 @@
     <div class="modal-dialog" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="modal-header">
-                <button aria-label="Close" class="close" type="button">
+                <button aria-label="Close" class="close" type="button" (click)="askPassword=false;password.value='';password2.value=''">
                     <clr-icon aria-hidden="true" shape="close"></clr-icon>
                 </button>
                 <h3 class="modal-title">Please enter your master password</h3>
             </div>
             <div class="modal-body savepassword">
-                <app-alert-error [error]="pwerror"></app-alert-error>
+                <app-alert-error [error]="errorPassword"></app-alert-error>
                 <input type="password" class="password" placeholder="master password" #password>
                 <input type="password" class="password" placeholder="master password again" #password2 (keyup.enter)="save(password.value, password2.value);password.value='';password2.value=''">
             </div>
             <div class="modal-footer">
-                <button class="btn btn-outline" type="button" (click)="askPassword=false;password.value=''">Cancel</button>
-                <button class="btn btn-danger" type="button" (click)="save(password.value, password2.value);password.value='';password2.value=''">Ok</button>
+                <button class="btn btn-outline" type="button" (click)="askPassword=false;password.value='';password2.value=''">cancel</button>
+                <button class="btn btn-danger" type="button" (click)="save(password.value, password2.value);password.value='';password2.value=''">save</button>
             </div>
         </div>
     </div>
 </div>
 
+<div class="modal" *ngIf="export">
+    <div class="modal-dialog" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button aria-label="Close" class="close" type="button" (click)="export=false;exportPassword.value=''">
+                    <clr-icon aria-hidden="true" shape="close"></clr-icon>
+                </button>
+                <h3 class="modal-title">Please enter your master password</h3>
+            </div>
+            <div class="modal-body savepassword">
+                <app-alert-error [error]="errorExport"></app-alert-error>
+                <input type="password" class="password" placeholder="master password" #exportPassword (keyup.enter)="exportToClipboard(exportPassword.value);exportPassword.value='';">
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-outline" type="button" (click)="export=false;exportPassword.value=''">cancel</button>
+                <button class="btn btn-danger" type="button" (click)="exportToClipboard(exportPassword.value);exportPassword.value='';">export</button>
+            </div>
+        </div>
+    </div>
+</div>
 
-<div class="modal-backdrop" aria-hidden="true" *ngIf="entryToDelete!==null || askPassword"></div>
+<div class="modal-backdrop" aria-hidden="true" *ngIf="entryToDelete!==null || askPassword || export"></div>
