passwords add button on top

--- a/projects/markdown-app/src/app/passwords/passwords.component.html
+++ b/projects/markdown-app/src/app/passwords/passwords.component.html
@@ -8,14 +8,19 @@
             <th>Service</th>
             <th>Username</th>
             <th>Password</th>
-            <th><input placeholder="search" name="input" class="search" [(ngModel)]="q" #search /></th>
+            <th>
+                <input placeholder="search" name="input" class="search" [(ngModel)]="q" #search />
+                <button type="button" class="btn btn-icon btn-sm btn-link add" (click)="add()">
+                    <clr-icon shape="add"></clr-icon> add
+                </button>
+            </th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let entry of getEntries(); let i = index">
             <td>
                 <span *ngIf="!entry.edit">{{entry.service}}</span>
-                <input *ngIf="entry.edit" type="text" [(ngModel)]="entry.service">
+                <input *ngIf="entry.edit" type="text" [(ngModel)]="entry.service" #service>
             </td>
             <td>
                 <span *ngIf="!entry.edit">{{entry.username}}</span>
