update: fixes refactoring

--- a/src/app/passwords/passwords.component.html
+++ b/src/app/passwords/passwords.component.html
@@ -85,7 +85,7 @@
     <div class="modal-dialog" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="modal-body">
-                <p>Really delete {{entries[entryToDelete].service}}?</p>
+                <p>Really delete {{entries![entryToDelete].service}}?</p>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-outline" type="button" (click)="entryToDelete=null">cancel</button>
