--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,9 @@
             </a>
         </div>
         <div class="header-nav">
-            <a class="nav-link nav-icon" (click)="add()"><clr-icon shape="add-text"></clr-icon></a>
-            <a class="nav-link nav-icon" [routerLink]="['/passwords']"><clr-icon shape="key"></clr-icon></a>
-            <a class="nav-link nav-icon" [routerLink]="['/filelist']"><clr-icon shape="upload-cloud"></clr-icon></a>
+            <a class="nav-link nav-icon" (click)="add()"><cds-icon shape="add-text"></cds-icon></a>
+            <a class="nav-link nav-icon" [routerLink]="['/passwords']"><cds-icon shape="key"></cds-icon></a>
+            <a class="nav-link nav-icon" [routerLink]="['/filelist']"><cds-icon shape="upload-cloud"></cds-icon></a>
         </div>
     </header>
     
