--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div>
-  <clr-icon shape="cursor-hand-click" size="122" class="light"></clr-icon>
+  <cds-icon shape="cursor-hand-click" size="122" class="light"></cds-icon>
   <h3>select page from navigation or add a new page</h3>
 </div>
