--- a/src/app/passwords/passwords.component.html
+++ b/src/app/passwords/passwords.component.html
@@ -11,7 +11,7 @@
             <th>
                 <input placeholder="search" name="input" class="search" [(ngModel)]="q" #search />
                 <button type="button" class="btn btn-icon btn-sm btn-link add" (click)="add()">
-                    <clr-icon shape="add"></clr-icon> add
+                    <cds-icon shape="add"></cds-icon> add
                 </button>
             </th>
         </tr>
@@ -32,16 +32,16 @@
                     <input [type]="entry.passwordShow ? 'text' : 'password'" clrPassword [value]="decryptPassword(entry.password)" (input)="entry.password = encryptPasswordFromUi($event.target)">
                 </clr-password-container>
                 
-                <clr-icon class="showhide" shape="eye" size="20" (click)="entry.passwordShow = true" *ngIf="!entry.passwordShow && !entry.edit"></clr-icon>
-                <clr-icon class="showhide" shape="eye-hide" size="20" (click)="entry.passwordShow = false" *ngIf="entry.passwordShow && !entry.edit"></clr-icon>
+                <cds-icon class="showhide" shape="eye" size="20" (click)="entry.passwordShow = true" *ngIf="!entry.passwordShow && !entry.edit"></cds-icon>
+                <cds-icon class="showhide" shape="eye-hide" size="20" (click)="entry.passwordShow = false" *ngIf="entry.passwordShow && !entry.edit"></cds-icon>
             </td>
             <td class="last">
-                <button type="button" class="btn btn-icon btn-sm" (click)="random(i)" *ngIf="entry.edit"><clr-icon shape="wand"></clr-icon></button>
-                <button type="button" class="btn btn-icon btn-sm btn-success" (click)="entry.edit=false" *ngIf="entry.edit"><clr-icon shape="check"></clr-icon></button>
-                <button type="button" class="btn btn-icon btn-sm btn-danger" (click)="entryToDelete=i" *ngIf="entry.edit"><clr-icon shape="trash"></clr-icon></button>
+                <button type="button" class="btn btn-icon btn-sm" (click)="random(i)" *ngIf="entry.edit"><cds-icon shape="wand"></cds-icon></button>
+                <button type="button" class="btn btn-icon btn-sm btn-success" (click)="entry.edit=false" *ngIf="entry.edit"><cds-icon shape="check"></cds-icon></button>
+                <button type="button" class="btn btn-icon btn-sm btn-danger" (click)="entryToDelete=i" *ngIf="entry.edit"><cds-icon shape="trash"></cds-icon></button>
 
-                <button class="btn btn-icon btn-sm" (click)="entry.edit=true" *ngIf="!entry.edit"><clr-icon shape="pencil"></clr-icon> edit</button>
-                <button class="btn btn-icon btn-sm btn-primary" (click)="clipboard(i)" *ngIf="!entry.edit"><clr-icon shape="copy-to-clipboard"></clr-icon> copy password</button>
+                <button class="btn btn-icon btn-sm" (click)="entry.edit=true" *ngIf="!entry.edit"><cds-icon shape="pencil"></cds-icon> edit</button>
+                <button class="btn btn-icon btn-sm btn-primary" (click)="clipboard(i)" *ngIf="!entry.edit"><cds-icon shape="copy-to-clipboard"></cds-icon> copy password</button>
             </td>
         </tr>
         <tr *ngIf="!entries && page">
@@ -53,7 +53,7 @@
         <tr *ngIf="entries">
             <td colspan="4" class="add">
                 <button type="button" class="btn btn-icon btn-sm btn-link" (click)="add()">
-                    <clr-icon shape="add"></clr-icon> add
+                    <cds-icon shape="add"></cds-icon> add
                 </button>
             </td>
         </tr>
@@ -71,7 +71,7 @@
         <div class="alert-items">
             <div class="alert-item static">
                 <div class="alert-icon-wrapper">
-                    <clr-icon class="alert-icon" shape="check-circle"></clr-icon>
+                    <cds-icon class="alert-icon" shape="check-circle"></cds-icon>
                 </div>
                 <span class="alert-text" *ngIf="success">successfully saved</span>
                 <span class="alert-text" *ngIf="successImport">successfully imported</span>
@@ -100,7 +100,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button aria-label="Close" class="close" type="button" (click)="askPassword=false;password.value='';password2.value=''">
-                    <clr-icon aria-hidden="true" shape="close"></clr-icon>
+                    <cds-icon aria-hidden="true" shape="close"></cds-icon>
                 </button>
                 <h3 class="modal-title">Please enter your master password</h3>
             </div>
@@ -122,7 +122,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button aria-label="Close" class="close" type="button" (click)="export=false;exportPassword.value=''">
-                    <clr-icon aria-hidden="true" shape="close"></clr-icon>
+                    <cds-icon aria-hidden="true" shape="close"></cds-icon>
                 </button>
                 <h3 class="modal-title">Please enter your master password</h3>
             </div>
