--- a/src/app/alert-error/alert-error.component.html
+++ b/src/app/alert-error/alert-error.component.html
@@ -2,7 +2,7 @@
   <div class="alert-items">
       <div class="alert-item static">
           <div class="alert-icon-wrapper">
-              <clr-icon class="alert-icon" shape="check-circle"></clr-icon>
+              <cds-icon class="alert-icon" shape="check-circle"></cds-icon>
           </div>
           <span class="alert-text">{{getErrorMessage()}}</span>
       </div>
