--- a/src/app/files/files.component.html
+++ b/src/app/files/files.component.html
@@ -11,9 +11,9 @@
 <table class="table" *ngIf="files$">
   <thead>
       <tr>
-          <th (click)="sort('name')">Filename <clr-icon shape="caret up" *ngIf="sortField=='name' && sortAsc"></clr-icon> <clr-icon shape="caret down" *ngIf="sortField=='name' && !sortAsc"></clr-icon></th>
-          <th (click)="sort('size')">Size <clr-icon shape="caret up" *ngIf="sortField=='size' && sortAsc"></clr-icon> <clr-icon shape="caret down" *ngIf="sortField=='size' && !sortAsc"></clr-icon></th>
-          <th (click)="sort('date')">Date <clr-icon shape="caret up" *ngIf="sortField=='date' && sortAsc"></clr-icon> <clr-icon shape="caret down" *ngIf="sortField=='date' && !sortAsc"></clr-icon></th>
+          <th (click)="sort('name')">Filename <cds-icon shape="caret up" *ngIf="sortField=='name' && sortAsc"></cds-icon> <cds-icon shape="caret down" *ngIf="sortField=='name' && !sortAsc"></cds-icon></th>
+          <th (click)="sort('size')">Size <cds-icon shape="caret up" *ngIf="sortField=='size' && sortAsc"></cds-icon> <cds-icon shape="caret down" *ngIf="sortField=='size' && !sortAsc"></cds-icon></th>
+          <th (click)="sort('date')">Date <cds-icon shape="caret up" *ngIf="sortField=='date' && sortAsc"></cds-icon> <cds-icon shape="caret down" *ngIf="sortField=='date' && !sortAsc"></cds-icon></th>
           <th></th>
       </tr>
   </thead>
@@ -23,9 +23,9 @@
           <td>{{file.size | fileSize}}</td>
           <td>{{file.date | date:'medium'}}</td>
           <td>
-              <clr-icon shape="copy-to-clipboard" size="20" ngxClipboard [cbContent]="'[' + file.name + '](data/files/' + file.name + ')'"></clr-icon>
+              <cds-icon shape="copy-to-clipboard" size="20" ngxClipboard [cbContent]="'[' + file.name + '](data/files/' + file.name + ')'"></cds-icon>
               &nbsp;
-              <clr-icon shape="trash" size="20" (click)="file.delete = true" *ngIf="!file.loading && !file.delete"></clr-icon>
+              <cds-icon shape="trash" size="20" (click)="file.delete = true" *ngIf="!file.loading && !file.delete"></cds-icon>
               <button class="btn btn-danger btn-sm" type="button" (click)="delete(file)" *ngIf="!file.loading && file.delete">delete</button>
               <button class="btn btn-outline btn-sm btn-link" type="button" (click)="file.delete = false" *ngIf="!file.loading && file.delete">cancel</button>
               &nbsp;
