--- a/src/app/page-show/page-show.component.html
+++ b/src/app/page-show/page-show.component.html
@@ -2,7 +2,7 @@
 <app-alert-error [error]="error"></app-alert-error>
 <div *ngIf="page" class="page">
     <button class="btn btn-outline" [routerLink]="['/page', 'edit', page.id]">edit</button>
-    <clr-icon [attr.shape]="page.icon" size="28"> </clr-icon>
+    <cds-icon [attr.shape]="page.icon" size="28"> </cds-icon>
     <h1>{{page.title}}</h1>
     <div class="markdown-formatted" [innerHtml]="page.content | markdown | bookmarks | async" *ngIf="page.content"></div>
 </div>
