--- a/src/styles.css
+++ b/src/styles.css
@@ -77,6 +77,7 @@ button:focus {
 
 .markdown-formatted .bookmarks li {
     list-style: none;
+    margin-bottom:3px;
 }
 
 .markdown-formatted .bookmarks h1,
@@ -86,11 +87,16 @@ button:focus {
 .markdown-formatted .bookmarks h5,
 .markdown-formatted .bookmarks h6 {
     margin-top:10px;
+    margin-bottom:5px;
 }
 
 .markdown-formatted .bookmarks img {
     width:16px;
     height:16px;
+}
+
+.markdown-formatted .bookmarks a {
+    text-decoration: none;
 }
 
 .markdown-formatted .error {
