--- a/src/app/passwords/passwords.component.html
+++ b/src/app/passwords/passwords.component.html
@@ -11,7 +11,7 @@
             <th>
                 <input placeholder="search" name="input" class="search" [(ngModel)]="q" #search />
                 <button type="button" class="btn btn-icon btn-sm btn-link add" (click)="add()">
-                    <cds-icon shape="add"></cds-icon> add
+                    <cds-icon shape="add-text"></cds-icon> add
                 </button>
             </th>
         </tr>
@@ -53,7 +53,7 @@
         <tr *ngIf="entries">
             <td colspan="4" class="add">
                 <button type="button" class="btn btn-icon btn-sm btn-link" (click)="add()">
-                    <cds-icon shape="add"></cds-icon> add
+                    <cds-icon shape="add-text"></cds-icon> add
                 </button>
             </td>
         </tr>
