--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,14 +1,18 @@
 .logo {
-    width:32px;
-    height:32px;
-    margin-right:10px;
+    width:2em;
+    height:2em;
+    margin-right:1em;
 }
 
 .sidenav {
-    padding-top:20px;
+    padding-top:1em;
     overflow:scroll;
 }
 
 .nav-link {
     cursor: pointer;
+}
+
+#search_input {
+    padding-left:0.5em;
 }
