--- a/src/app/passwords/passwords.component.css
+++ b/src/app/passwords/passwords.component.css
@@ -21,7 +21,7 @@ th .add {
 
 .password {
     font-size: 1.1em;
-    border-radius: 2px;
+    border-radius: 0.1em;
     margin-right:0.3em;
     padding: 0.3em;
     vertical-align: middle;
@@ -38,7 +38,7 @@ th .add {
 
 .savepassword .password {
     display:block;
-    margin-top: 10px;
+    margin-top: 1em;
     width: 60%;
 }
 
@@ -47,7 +47,7 @@ th .add {
 }
 
 table button {
-    margin-top:3px;
+    margin-top:0.2em;
     margin-bottom: 0;
 }
 
@@ -62,11 +62,11 @@ td.last {
 
 td span {
     display: inline-block;
-    margin-top:10px;
+    margin-top:1em;
 }
 
 .action {
-    margin-top:20px;
+    margin-top:1.5em;
 }
 
 .modal-body {
@@ -82,7 +82,7 @@ td clr-password-container {
 }
 
 .showhide {
-    margin-left:7px;
+    margin-left:0.7em;
 }
 
 .hidden {
