fix icons and styling

--- a/src/styles.css
+++ b/src/styles.css
@@ -109,6 +109,7 @@ button:focus {
     margin-left: 1.2em;
 }
 
+.markdown-formatted ul:not([cds-list]),
 .markdown-formatted ul {
     margin-left: 1.5em;
 }
