update angular and clarity

--- a/src/app/components/passwords/passwords.component.css
+++ b/src/app/components/passwords/passwords.component.css
@@ -19,20 +19,20 @@ th .add {
     padding:50px;
 }
 
-.password {
+input {
     font-size: 1.1em;
     border-radius: 0.1em;
     margin-right:0.3em;
     padding: 0.3em;
     vertical-align: middle;
-    border: 1px solid #ccc;
+    border: 1px solid #aaa;
 }
 
 .unlock .btn {
     margin:0;
 }
 
-.password:focus{
+input:focus{
     outline: none;
 }
 
@@ -78,7 +78,7 @@ cds-icon {
 }
 
 td clr-password-container {
-    margin-top:0;
+    margin-top:5px;
 }
 
 .showhide {
